--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@types/three": "^0.180.0",
+    "apexcharts": "^5.3.6",
     "leaflet": "^1.9.4",
     "react": "^19.1.1",
+    "react-apexcharts": "^1.8.0",
     "react-dom": "^19.1.1",
     "react-leaflet": "^5.0.0",
     "three": "^0.180.0"
