Feature: Enhances welcome modal with mode selection
Implements a new welcome modal with animated background and mode selection screen using Framer Motion.

This change improves the user experience by providing a visually appealing and interactive onboarding process.

Adds new animations and transitions to enhance the modal's visual appeal.

Includes performance optimizations for smoother animations.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/three": "^0.180.0",
     "apexcharts": "^5.3.6",
+    "framer-motion": "^12.23.25",
     "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-apexcharts": "^1.8.0",
