--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/three": "^0.180.0",
     "apexcharts": "^5.3.6",
     "framer-motion": "^12.23.25",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-apexcharts": "^1.8.0",
