--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.1",
     "react-apexcharts": "^1.8.0",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "three": "^0.180.0"
   },
